--- a/config.yml
+++ b/config.yml
@@ -15,6 +15,13 @@ pipeline:
   - name: EntitySynonymMapper
   - name: ResponseSelector
     epochs: 100
+  - name: DucklingHTTPExtractor
+    url: "http://localhost:8000"
+    locale: "en"
+    timezone: "Africa/Nairobi"
+    dimensions: ["time","email","phone-number"]
+    timeout : 3
+    
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
@@ -24,3 +31,4 @@ policies:
     max_history: 5
     epochs: 100
   - name: MappingPolicy
+  - name: FormPolicy
