--- a/domain.yml
+++ b/domain.yml
@@ -15,6 +15,7 @@ intents:
 - thankyou
 - request_contact
 - demo_1
+- sapi
 entities:
 - number
 - email
@@ -81,5 +82,6 @@ actions:
 - utter_ask_phone-number
 - utter_slot_values
 - action_selektor
+- action_sapi
 forms:
 - form_contact
