--- a/domain.yml
+++ b/domain.yml
@@ -15,6 +15,7 @@ intents:
 - thankyou
 - request_contact
 - demo_1
+- request_demo
 - sapi
 - default_action
 - lost
@@ -29,6 +30,8 @@ slots:
   number:
     type: unfeaturized
   phone-number:
+    type: unfeaturized
+  requested_slot:
     type: unfeaturized
   time:
     type: unfeaturized
@@ -81,6 +84,11 @@ responses:
   utter_default:
   - text: Sorry, i didnot understand!
   - text: Sorry, what was that ?
+  utter_bye:
+  - text: Bye
+  utter_thankyou:
+  - text: 👍 You are welcome!
+  - text: 🤝 any time, glad to help!
 actions:
 - utter_ask_email
 - utter_ask_time
@@ -90,3 +98,4 @@ actions:
 - action_sapi
 forms:
 - form_contact
+- form_booking
