--- a/domain.yml
+++ b/domain.yml
@@ -117,6 +117,9 @@ responses:
   utter_come_later:
   - text: You can always reach out to us any time 😉
   - text: ''
+  utter_get_started:
+  - text: Please contact us and we can start the process and get you a smart personal
+      assistant for you business
 actions:
 - utter_ask_email
 - utter_ask_time
